kubernetes/03-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: proyecto-integrador
  labels:
    name: proyecto-integrador
