kubernetes/01-accounts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-accounts
  labels:
    app: ms-accounts
  namespace: proyecto-integrador
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-accounts
  template:
    metadata:
      name: ms-accounts
      labels:
        app: ms-accounts
    spec:
      containers:
        - name: ms-accounts
          image: romicolombo/ms-accounts:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8091
