kubernetes/01-eureka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka
  labels:
    app: eureka
  namespace: proyecto-integrador
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      name: eureka
      labels:
        app: eureka
    spec:
      containers:
        - name: eureka
          image: romicolombo/eureka:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8761
