kubernetes/01-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-gateway
  labels:
    app: ms-gateway
  namespace: proyecto-integrador
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-gateway
  template:
    metadata:
      name: ms-gateway
      labels:
        app: ms-gateway
    spec:
      containers:
        - name: ms-gateway
          image: romicolombo/ms-gateway:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
