kubernetes/01-user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-user
  labels:
    app: ms-user
  namespace: proyecto-integrador
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-user
  template:
    metadata:
      name: ms-user
      labels:
        app: ms-user
    spec:
      containers:
        - name: ms-user
          image: romicolombo/ms-users:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8090
