kubernetes/02-user-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ms-user
  labels:
    app: ms-user
  namespace: proyecto-integrador
spec:
  type: ClusterIP
  selector:
    app: ms-user
  ports:
  - protocol: TCP
    port: 8090
    targetPort: 8090
